[package]
name = "mini_async_repl"
version = "0.2.1"
authors = ["Martin Verzilli <martin.verzilli@gmail.com", "Jędrzej Boczar <jedrzej.boczar@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An async-first REPL"
repository = "https://github.com/mverzilli/mini-async-repl"
keywords = [
    "repl",
    "cli",
    "shell",
    "interactive",
    "async",
]
categories = ["command-line-interface"]

[dependencies]
rustyline = "9.0"
rustyline-derive = "0.6"
thiserror = "1.0"
anyhow = "1.0"
textwrap = "0.15"
trie-rs = "0.1"
shell-words = "1.0"
tokio = { version = "1.34.0", features = ["macros", "rt", "rt-multi-thread"] }